AG-3390 - Fix header layout issues

--- a/documentation/ag-grid-docs/src/design-system/core/_breakpoints.scss
+++ b/documentation/ag-grid-docs/src/design-system/core/_breakpoints.scss
@@ -29,7 +29,7 @@ $fw-selector-full-width-large: 1020px;
 $docs-search-small: 420px;
 $docs-search-medium: 720px;
 
-$docs-nav-medium: 992px;
+$docs-nav-medium: 1052px;
 $docs-nav-large: 1475px;
 $docs-nav-extra-large: 1880px;
 
